//protoc --go_out=../service Product.proto
syntax = "proto3";
option go_package = "/src/test/service";
package service;

message ProductRequest {
    int32 prod_id = 1;
}

message ProductResponse {
  int32 prod_stock = 1;
}

service Getgg {
  rpc GetProdStock(ProductRequest) returns (ProductResponse);
}